--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.6.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "tailwindcss-debug-screens": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
