--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "react-tilty": "^3.0.0",
     "react-toastify": "^9.1.1",
+    "swiper": "^9.0.5",
     "tailwindcss-debug-screens": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
