--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
+    "export-from-json": "^1.7.2",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.6.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
