--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^9.1.1",
     "swiper": "^9.0.5",
     "tailwindcss-debug-screens": "^2.2.1",
+    "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
